--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -1,41 +1,36 @@
-.parallax {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  overflow: hidden;
-
-  #title {
-    font-size: 70px;
-    color: var(--cl-white);
-    position: absolute;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-  }
-
-  img {
-    position: absolute;
-    object-fit: contain;
-    top: 0;
-    left: 0;
+.wrap-home {
+  .img-main {
     width: 100%;
-    pointer-events: none;
-  }
-}
-
-.content {
-  background-color: #003329;
-  position: relative;
-  padding: 100px;
-  color: var(--cl-white);
-  text-align: justify;
-
-  h1 {
-    color: var(--cl-white);
-    font-size: 40px;
+    height: 100%;
   }
 
-  .btn-login {
-    font-size: larger;
+  .carousel {
+    width: 784px;
+    height: 294px;
+
+    .slick-prev,
+    .slick-next {
+      position: absolute;
+      top: 50%;
+      font-size: 30px;
+      transform: translateY(-50%);
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      z-index: 100;
+    }
+
+    .slick-prev {
+      left: 30px;
+    }
+
+    .slick-next {
+      right: 30px;
+    }
+  }
+
+  .img-small {
+    height: 100px;
+    width: 385px;
   }
 }
