update page comment

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -9,6 +9,7 @@
   --bg-border-primary: rgba(255, 255, 255, 0.5);
   --cl-white: #fff;
   --cl-black: #000;
+  --bg-primary: #0089ce;
 
   --height-header: 60px;
 
