--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -3,8 +3,9 @@
   height: var(--height-header);
   position: fixed;
   z-index: var(--z-index-main-header);
-  border-bottom: 1px solid #F2F2F2;
+  border-bottom: 1px solid #f2f2f2;
   box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+  background-color: var(--bg-primary);
 
   .wrap-logo {
     user-select: none;
