--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -23,6 +23,11 @@
   --z-index-back: -1;
 }
 
+.btn-primary {
+  background-color: var(--bg-primary) !important;
+  border: 1px solid var(--bg-primary) !important;
+}
+
 /*1. RESET AND TYPHOGRAPHY*/
 html {
   font-family: sans-serif;
